Bug 548276 - "Assertion failure: HAS_FUNCTION_CLASS(funobj), at ../jsdbgapi.cpp". r=jwalden.